# serializer version: 1
# name: test_detail_view[<lambda>-document_detail_view][document_detail_view]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  </li>
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="document" href="/documentation/[Slug of Category]-[PK of Category]/">Test Category</a>
                  </li>
              
          </ol>
      </nav>
  </div>
  
  
              
                  
      <section class="s-title-01 mt-lg-5">
      <div class="s-title-01__container container">
          <div class="s-title-01__row row">
              <div class="s-title-01__col col-12">
                  <h1>Test Document</h1>
                  
                      <div>
                          
                      </div>
                  
                  
                  <h2 class="mt-3">Test short description</h2>
              </div>
          </div>
      </div>
  </section>
  
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12 col-lg-9">
                      <div class="row align-items-sm-center mb-3">
                          <div class="col-12 col-sm mb-3">
  <span class="fs-sm text-muted">Mis à jour le [CURRENT DATE]</span>
  </div>
                          
  
      <div class="col-12 col-sm-auto mb-3">
          <div class="d-none d-md-block forum-image mt-3" loading="lazy">
              <img alt="Test Document" class="rounded img-fluid" src="[img src]"/>
          </div>
      </div>
  
  <div class="col-12">
      <article class="textarea_cms_md"><p>Test description</p></article>
  </div>
  
                          
                      </div>
                  </div>
                  <div class="col-12 col-lg-3 vertical-line">
                      <p class="h3 text-decoration-none d-inline-block">Les autres fiches du thème Test Category</p>
                      <ul class="nav nav-tabs flex-column">
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 3</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 2</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 1</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link active" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">Test Document</a>
                              </li>
                          
                      </ul>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: test_detail_view[<lambda>-document_detail_view_with_certified_document][document_detail_view_with_certified_document]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  </li>
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="document" href="/documentation/[Slug of Category]-[PK of Category]/">Test Category</a>
                  </li>
              
          </ol>
      </nav>
  </div>
  
  
              
                  
      <section class="s-title-01 mt-lg-5">
      <div class="s-title-01__container container">
          <div class="s-title-01__row row">
              <div class="s-title-01__col col-12">
                  <h1>Test Document</h1>
                  
                      <div>
                          
                      </div>
                  
                  
                  <h2 class="mt-3">Test short description</h2>
              </div>
          </div>
      </div>
  </section>
  
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12 col-lg-9">
                      <div class="row align-items-sm-center mb-3">
                          <div class="col-12 col-sm mb-3">
      <span class="badge badge-xs rounded-pill bg-communaute text-white text-decoration-none">
          <i class="ri-checkbox-circle-fill"></i>
          Certifiée par la communauté de l'inclusion
      </span>
  
  <span class="fs-sm text-muted">Mis à jour le [CURRENT DATE]</span>
  </div>
                          
  
      <div class="col-12 col-sm-auto mb-3">
          <div class="d-none d-md-block forum-image mt-3" loading="lazy">
              <img alt="Test Document" class="rounded img-fluid" src="[img src]"/>
          </div>
      </div>
  
  <div class="col-12">
      <article class="textarea_cms_md"><p>Test description</p></article>
  </div>
  
                          
                      </div>
                  </div>
                  <div class="col-12 col-lg-3 vertical-line">
                      <p class="h3 text-decoration-none d-inline-block">Les autres fiches du thème Test Category</p>
                      <ul class="nav nav-tabs flex-column">
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 3</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 2</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 1</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link active" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">Test Document</a>
                              </li>
                          
                      </ul>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: test_detail_view[<lambda>-document_detail_view_with_partner][document_detail_view_with_partner]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  </li>
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="document" href="/documentation/[Slug of Category]-[PK of Category]/">Test Category</a>
                  </li>
              
          </ol>
      </nav>
  </div>
  
  
              
                  
      <section class="s-title-01 mt-lg-5">
      <div class="s-title-01__container container">
          <div class="s-title-01__row row">
              <div class="s-title-01__col col-12">
                  <h1>Test Document</h1>
                  
                      <div>
                          
                      </div>
                  
                  
                  <h2 class="mt-3">Test short description</h2>
              </div>
          </div>
      </div>
  </section>
  
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12 col-lg-9">
                      <div class="row align-items-sm-center mb-3">
                          <div class="col-12 col-sm mb-3">
  <span class="fs-sm text-muted">Mis à jour le [CURRENT DATE]</span>
  </div>
                          
  
      <div class="col-12 col-sm-auto mb-3">
          <div class="d-none d-md-block forum-image mt-3" loading="lazy">
              <img alt="Test Document" class="rounded img-fluid" src="[img src]"/>
          </div>
      </div>
  
  <div class="col-12">
      <article class="textarea_cms_md"><p>Test description</p></article>
  </div>
  
                          
                              <div class="col-12 col-sm-auto mt-3" id="partner_area">
                                  <a href="/partenaires/[Slug of Partner]-[PK of Partner]/">
      <div class="d-flex gap-3 align-items-center mb-2">
          
          <h4>Fiche co-rédigée en partenariat avec Best Partner Ever</h4>
      </div>
  </a>
  
                              </div>
                          
                      </div>
                  </div>
                  <div class="col-12 col-lg-3 vertical-line">
                      <p class="h3 text-decoration-none d-inline-block">Les autres fiches du thème Test Category</p>
                      <ul class="nav nav-tabs flex-column">
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 3</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 2</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 1</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link active" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">Test Document</a>
                              </li>
                          
                      </ul>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: test_detail_view[<lambda>-document_detail_view_with_tags][document_detail_view_with_tags]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  </li>
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="document" href="/documentation/[Slug of Category]-[PK of Category]/">Test Category</a>
                  </li>
              
          </ol>
      </nav>
  </div>
  
  
              
                  
      <section class="s-title-01 mt-lg-5">
      <div class="s-title-01__container container">
          <div class="s-title-01__row row">
              <div class="s-title-01__col col-12">
                  <h1>Test Document</h1>
                  
                      <div>
                          <span class="tag bg-info-lighter text-info">tag</span>
                      </div>
                  
                  
                  <h2 class="mt-3">Test short description</h2>
              </div>
          </div>
      </div>
  </section>
  
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="col-12 col-lg-9">
                      <div class="row align-items-sm-center mb-3">
                          <div class="col-12 col-sm mb-3">
  <span class="fs-sm text-muted">Mis à jour le [CURRENT DATE]</span>
  </div>
                          
  
      <div class="col-12 col-sm-auto mb-3">
          <div class="d-none d-md-block forum-image mt-3" loading="lazy">
              <img alt="Test Document" class="rounded img-fluid" src="[img src]"/>
          </div>
      </div>
  
  <div class="col-12">
      <article class="textarea_cms_md"><p>Test description</p></article>
  </div>
  
                          
                      </div>
                  </div>
                  <div class="col-12 col-lg-3 vertical-line">
                      <p class="h3 text-decoration-none d-inline-block">Les autres fiches du thème Test Category</p>
                      <ul class="nav nav-tabs flex-column">
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 3</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 2</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">titre 1</a>
                              </li>
                          
                              <li class="nav-item">
                                  <a class="nav-link active" href="/documentation/[PK of Category]/[Slug of Document]-[PK of Document]/">Test Document</a>
                              </li>
                          
                      </ul>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
